fix(root): fixed alignment issues with code-preview
fixed alignment and display issues on code previews for radio, checkbox, pagination & popover. Also
moved theme outside of comp-zone so styles were being applied

--- a/src/components/CodePreview/index.css
+++ b/src/components/CodePreview/index.css
@@ -50,7 +50,6 @@
   padding: var(--ic-space-xl) var(--ic-space-md);
   box-sizing: border-box;
   flex-wrap: wrap;
-  background: var(--ic-architectural-white);
 }
 
 .comp-zone.pattern {
